--- a/packages/website/src/_includes/layouts/api.njk
+++ b/packages/website/src/_includes/layouts/api.njk
@@ -1,17 +1,16 @@
 ---
 layout: ./layouts/base.njk
+renderData:
+  stickyNavigation: false
 ---
 
-<section>
-  <div class="max-w-6xl mx-auto px-4 sm:px-6">
-      <!-- Main content -->
-    <div class="md:pb-20 xl:flex xl:justify-between">
-      {% include "../components/apinav.njk" %}
+<div class="max-w-5xl mx-auto px-4 sm:px-6 md:pb-20 xl:flex xl:justify-between">
 
-      <!-- Page container -->
-      <div class="md:grow xl:mt-24">
-        {{ content | safe }}
-      </div>
-    </div>
+  {% include "../components/apinav.njk" %}
+
+  <!-- Page container -->
+  <div class="md:grow ">
+    {{ content | safe }}
   </div>
-</section>
+
+</div>
