--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -4,24 +4,21 @@
     <title>{{ title or renderData.title}} | uiloos</title>
     <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
 
-    <link rel="icon" href="/images/favicon.png" sizes="any"><!-- 32×32 -->
+    <link rel="icon" href="/images/favicon.png" sizes="any">
+    <!-- 32×32 -->
     <link rel="icon" href="/images/icon.svg" type="image/svg+xml">
   </head>
 
-  <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
+  <body class="font-inter antialiased bg-white text-gray-900 tracking-tight flex flex-col min-h-screen">
 
-    <!-- Page wrapper -->
-    <div class="flex flex-col min-h-screen">
+    {% include "../components/navigation.njk" %}
 
-      {% include "../components/navigation.njk" %}
+    <!-- Page content -->
+    <main class="grow text-xl">
+      {{ content | safe }}
+    </main>
 
-      <!-- Page content -->
-      <main class="grow">
-        {{ content | safe }}
-      </main>
-
-      {% include "../components/footer.njk" %}
-    </div>
+    {% include "../components/footer.njk" %}
 
     <script src="/assets/main.js"></script>
   </body>
