--- a/packages/website/src/pages/api/angular/_includes/component.njk
+++ b/packages/website/src/pages/api/angular/_includes/component.njk
@@ -1,5 +1,5 @@
-<div class="text-xl">
-  <h1 class="h1 mb-4">
+<article>
+  <h1>
     {{def.name}}
 
     {% if def.typeParameter.length > 0 %}
@@ -15,16 +15,16 @@
     {% endif %}
   {% endfor %}
 
-  <p class="mb-4">{{def.comment.shortText | escape | nl2br}}</p>
+  <p>{{def.comment.shortText | escape | nl2br}}</p>
   {% if def.comment.text %}
     <p class="mb-2">{{def.comment.text | escape | nl2br}}</p>
   {% endif %}
 
-  <h2 class="h2 mb-2" id="inputs"><a href="#inputs">Inputs</a></h2>
+  <h2 id="inputs"><a href="#inputs">Inputs</a></h2>
   {% for item in def.children %}
     {% if not item.flags.isPrivate and item.kindString === 'Property' and item.decorators[0].name === 'Input' %}
       {% include "../../_includes/property.njk" %}
     {% endif %}
   {% endfor %}
 
-</div>
+</article>
