--- a/packages/website/src/pages/api/api.njk
+++ b/packages/website/src/pages/api/api.njk
@@ -7,18 +7,18 @@ eleventyNavigation:
   order: 1
 ---
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">API</h1>
-  <p class="mb-4">
+<article>
+  <h1>API</h1>
+  <p>
     The uiloos API is divided in several two parts: 
   </p>
 
-  <p class="mb-4">
+  <p>
     The first is the <a class="underline text-purple-600" href="core/">core</a>
     which contains all classes which can be used in vanilla JavaScript.
   </p>
 
-  <p class="mb-4">
+  <p>
     The second part consists of packages which make using uiloos easier in 
     various front-end frameworks by providings framework specific bindings.
     Currently there are bindings for:
@@ -29,4 +29,4 @@ eleventyNavigation:
     <li class="mb-2"><a class="underline text-purple-600" href="vue/">Vue</a></li>
     <li class="mb-2"><a class="underline text-purple-600" href="angular/">Angular</a></li>
   </ul>
-</div>
+</article>
