--- a/packages/website/src/pages/api/react/react.njk
+++ b/packages/website/src/pages/api/react/react.njk
@@ -6,10 +6,10 @@ permalink: /api/react/
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">React</h1>
+<article>
+  <h1>React</h1>
 
-  <p class="mb-8">The React bindings for uiloos.</p>
+  <p>The React bindings for uiloos.</p>
 
   {{ displayApi(api.react.children, 'react') }}
-</div>
+</article>
