--- a/packages/website/src/pages/api/vue/_includes/plugin.njk
+++ b/packages/website/src/pages/api/vue/_includes/plugin.njk
@@ -1,5 +1,5 @@
-<div class="text-xl">
-  <h1 class="h1 mb-4">
+<article>
+  <h1>
     {{def.name}}
 
     {% if def.typeParameter.length > 0 %}
@@ -9,8 +9,8 @@
 
   <p class="text-2xl font-mono mb-4 text-purple-800">PLUGIN</p>
 
-  <p class="mb-4">{{def.comment.shortText | escape | nl2br}}</p>
+  <p>{{def.comment.shortText | escape | nl2br}}</p>
   {% if def.comment.text %}
     <p class="mb-2">{{def.comment.text | escape | nl2br}}</p>
   {% endif %}
-</div>
+</article>
