--- a/packages/website/src/pages/docs/active-list/active-list.njk
+++ b/packages/website/src/pages/docs/active-list/active-list.njk
@@ -4,10 +4,10 @@ layout: layouts/docs.njk
 permalink: /docs/active-list/
 ---
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">ActiveList</h1>
+<article>
+  <h1>ActiveList</h1>
 
-  <p class="mb-4">
+  <p>
     Welcome to the documentation hub of the ActiveList.
   </p>
 
@@ -50,4 +50,4 @@ permalink: /docs/active-list/
     </svg>
   </a>
 
-</div>
+</article>
