--- a/packages/website/src/pages/docs/active-list/examples.njk
+++ b/packages/website/src/pages/docs/active-list/examples.njk
@@ -7,10 +7,10 @@ renderData:
   current: 'active-list-examples'
 ---
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">ActiveList Examples</h1>
+<article>
+  <h1>ActiveList Examples</h1>
 
-  <p class="mb-4">
+  <p>
     Fleshed out examples showing how to use the ActiveList. They 
     serve as starting points for your own components.
   </p>
@@ -49,4 +49,4 @@ renderData:
       </a>
     {% endfor %}
   </div>
-</div>
+</article>
