--- a/packages/website/src/pages/docs/active-list/frameworks.njk
+++ b/packages/website/src/pages/docs/active-list/frameworks.njk
@@ -7,40 +7,42 @@ renderData:
   current: 'active-list-frameworks'
 ---
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">ActiveList usage with Frameworks</h1>
+<article>
+  <h1>ActiveList usage with Frameworks</h1>
 
-  <em>Table of contents</em>
-  <ol class="list-decimal m-2 mb-4">
-    <li class="ml-8">
-      <a href="#in-general" class="text-purple-600 underline">In general</a>
-    </li>
-    <li class="ml-8">
-      <a href="#react" class="text-purple-600 underline">React</a>
-    </li>
-    <li class="ml-8">
-      <a href="#vue" class="text-purple-600 underline">Vue</a>
-    </li>
-    <li class="ml-8">
-      <a href="#angular" class="text-purple-600 underline">Angular</a>
-    </li>
-  </ol>
+  <nav class="2xl:fixed 2xl:top-24 2xl:right-2 2xl:w-[270px]" role="doc-toc" data-no-highlight="true">
+    <em>Table of contents</em>
+    <ol class="list-decimal m-2 mb-4">
+      <li class="ml-8">
+        <a href="#in-general" class="text-purple-600 underline">In general</a>
+      </li>
+      <li class="ml-8">
+        <a href="#react" class="text-purple-600 underline">React</a>
+      </li>
+      <li class="ml-8">
+        <a href="#vue" class="text-purple-600 underline">Vue</a>
+      </li>
+      <li class="ml-8">
+        <a href="#angular" class="text-purple-600 underline">Angular</a>
+      </li>
+    </ol>
+  </nav>
 
   <h2 id="react" class="h2 mb-4"><a href="#react">1. In general</a></h2>
 
-  <p class="mb-4">
+  <p>
     The <a href="/api/core/activelist/" class="underline high">ActiveList</a> 
     component works well with any framework which supports reactivity.
   </p>
 
-  <p class="mb-4">
+  <p>
     For example in both Angular and Vue you can use instances of 
     the ActiveList as is, both frameworks understand when you 
     manipulate the ActiveList, that it will need to  re-render 
     component.
   </p>
 
-  <p class="mb-4">
+  <p>
     When using frameworks you will not need to subscribe to changes
     and observe the ActiveList manually. This allows you to use the
     ActiveList more declaratively. Using the ActiveList declaratively 
@@ -49,7 +51,7 @@ renderData:
 
   <h2 id="react" class="h2 mb-4"><a href="#react">2. React</a></h2>
 
-  <p class="mb-4">
+  <p>
     When using React you should use the 
     <a href="https://www.npmjs.com/package/@uiloos/react" target="_blank" rel="noopener noreferrer" class="high underline">@uiloos/react</a>
     library. It contains the <a href="/api/react/useactivelist/" class="high underline">useActiveList</a>
@@ -59,7 +61,7 @@ renderData:
 
   <h2 id="vue" class="h2 mb-4"><a href="#vue">3. Vue</a></h2>
 
-  <p class="mb-4">
+  <p>
     In Vue you should use the 
     <a href="https://www.npmjs.com/package/@uiloos/vue" target="_blank" rel="noopener noreferrer" class="high underline">@uiloos/vue</a>
     library. It contains the <a href="/api/vue/useactivelist/" class="high underline">useActiveList</a>
@@ -69,7 +71,7 @@ renderData:
 
   <h2 id="angular" class="h2 mb-4"><a href="#angular">4. Angular</a></h2>
 
-  <p class="mb-4">
+  <p>
     If you are using Angular there is no need to include an extra library.
     As long as you use ActiveList inside of a <span class="high">@Component</span> 
     it will pick up on changes automatically.
@@ -87,4 +89,4 @@ renderData:
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
     </svg>
   </a>
-</div>
+</article>
