--- a/packages/website/src/pages/docs/active-list/playground.njk
+++ b/packages/website/src/pages/docs/active-list/playground.njk
@@ -7,17 +7,17 @@ renderData:
   current: 'active-list-playground'
 ---
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">ActiveList Playground</h1>
+<article>
+  <h1>ActiveList Playground</h1>
 
-  <p class="mb-4">
+  <p>
     To get a feel for the
     <a href="/api/core/activelist/" class="high underline">ActiveList</a>
     we have created a playground. It allows you to use the API behind the
     ActiveList in a visual manner.
   </p>
 
-  <h2 class="h2 mb-4">Visual</h2>
+  <h2>Visual</h2>
   <div
     id="grid"
     class="flex gap-4 mb-4 sticky top-4 bg-white p-4 overflow-x-auto shadow-xl"
@@ -39,9 +39,9 @@ renderData:
     </div>
   </div>
 
-  <h2 class="h2 mb-4">Properties</h2>
+  <h2>Properties</h2>
 
-  <h2 class="h2 mb-4">Activate</h2>
+  <h2>Activate</h2>
   <ul class="text-md">
     <li id="activate" class="mb-4">
       <span class="high"
@@ -93,7 +93,7 @@ renderData:
     </li>
   </ul>
 
-  <h2 class="h2 mb-4">Deactivate</h2>
+  <h2>Deactivate</h2>
   <ul class="text-md">
     <li id="deactivate" class="mb-4">
       <span class="high"
@@ -133,7 +133,7 @@ renderData:
     </li>
   </ul>
 
-  <h2 class="h2 mb-4">Insertion</h2>
+  <h2>Insertion</h2>
   <ul class="text-md">
     <li id="insertAtIndex" class="mb-4">
       <span class="high"
@@ -167,7 +167,7 @@ renderData:
     </li>
   </ul>
 
-  <h2 class="h2 mb-4">Removal</h2>
+  <h2>Removal</h2>
   <ul class="text-md">
     <li id="remove" class="mb-4">
       <span class="high"
@@ -213,7 +213,7 @@ renderData:
     </li>
   </ul>
 
-  <h2 class="h2 mb-4">Moving</h2>
+  <h2>Moving</h2>
   <ul class="text-md">
     <li id="move" class="mb-4">
       <span class="high"
@@ -317,7 +317,7 @@ renderData:
     </li>
   </ul>
 
-  <!-- <h2 class="h2 mb-4">Selected</h2>
+  <!-- <h2>Selected</h2>
   <ul>
     <li>
       <span class="high">activate()</span>
@@ -360,8 +360,8 @@ renderData:
     </li>
   </ul> -->
 
-  <h2 class="h2 mb-4">JSON</h2>
+  <h2>JSON</h2>
   <pre id="json"></pre>
 
   <script src="/assets/active-list-playground.js" defer="true"></script>
-</div>
+</article>
