--- a/packages/website/src/pages/docs/getting-started/getting-started.njk
+++ b/packages/website/src/pages/docs/getting-started/getting-started.njk
@@ -4,9 +4,9 @@ layout: layouts/docs.njk
 permalink: /docs/getting-started/
 ---
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">Getting started</h1>
-  <p class="mb-4">
+<article>
+  <h1>Getting started</h1>
+  <p>
     Getting started with "uiloos" is one npm / yarn / pnpm install away.
   </p>
 
@@ -22,4 +22,4 @@ permalink: /docs/getting-started/
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
     </svg>
   </a>
-</div>
+</article>
