--- a/packages/website/src/pages/docs/getting-started/installation.njk
+++ b/packages/website/src/pages/docs/getting-started/installation.njk
@@ -7,33 +7,33 @@ renderData:
   current: 'installation'
 ---
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">Installation</h1>
+<article>
+  <h1>Installation</h1>
 
-  <p class="mb-4">
+  <p>
     "uiloos" can be installed via your package manager of choice:
   </p>
 
-  <h2 class="h2 mb-4">npm</h2>
+  <h2>npm</h2>
 
   {% highlight "text" %}
     npm install @uiloos/core
   {% endhighlight %}
 
-  <h2 class="h2 mb-4">Yarn</h2>
+  <h2>Yarn</h2>
 
   {% highlight "text" %}
     yarn add @uiloos/core
   {% endhighlight %}
 
-  <h2 class="h2 mb-4">pnpm</h2>
+  <h2>pnpm</h2>
 
   {% highlight "text" %}
     pnpm add @uiloos/core
   {% endhighlight %}
 
-  <h2 class="h2 mb-4">UNPKG</h2>
-  <p class="mb-4">
+  <h2>UNPKG</h2>
+  <p>
     Alternatively you can install "uiloos" by using a CDN such as 
     <a href="https://unpkg.com/browse/@uiloos/core@latest/dist/" target="_blank" rel="noopener noreferrer" class="underline">
       UNPKG
@@ -63,4 +63,4 @@ renderData:
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
     </svg>
   </a>
-</div>
+</article>
