--- a/packages/website/src/pages/letters/to-developers.njk
+++ b/packages/website/src/pages/letters/to-developers.njk
@@ -9,61 +9,61 @@ permalink: /letters/to-developers/
     <!-- Article header -->
     <header class="max-w-3xl mx-auto mb-4">
       <!-- Title -->
-      <h1 class="h1 text-center mb-4">A Letter to Developers</h1>
+      <h1 class="text-center">A Letter to Developers</h1>
     </header>
 
     <div class="flex justify-center mb-8">
       <img class="transform scale-105 hover:-translate-y-1 transition duration-500 ease-out" src="/images/avatars/developer.svg" alt="a developer" loading="lazy"/>
     </div>
 
-    <div class="text-xl max-w-3xl mx-auto">
-      <p class="mb-4">
+    <div class="max-w-3xl mx-auto">
+      <p>
         Dear Developer,
       </p>
 
-      <p class="mb-4">
+      <p>
         At the start of my career I was called a web-developer. My task was simple: take the designs
         of the graphical designer and make it so. I found breathing life into the designs to be very rewarding 
         work. There was however one thing I always dreaded: when things had to be a 
         little more interactive.
       </p>
 
-      <p class="mb-4">
+      <p>
         Say for example you get a design with a carousel, and you want to implement it. There are 
         now two options:
       </p>
 
-      <p class="mb-4">
+      <p>
         A: code up something completely custom in JavaScript, HTML and CSS in order to stay true to the design.
         This approach takes more time, but will ultimately make the design of the website or application stand 
         out more. 
       </p>
 
-      <p class="mb-4">
+      <p>
         B: use a ready made plugin / component. This approach is always tricky. What if the CSS clashes with 
         your own? Can the plugin / component be styled to look more like the design? Is the code still maintained?
       </p>
 
-      <p class="mb-4">
+      <p>
         uiloos wants to make it faster / easier to create custom visual components, by providing common
         behaviors in pure JavaScript. uiloos by design does not contain any HTML or CSS so there is 
         nothing to clash with. This makes it easy to integrate in existing codebases.
       </p>
 
-      <p class="mb-4">
+      <p>
         My goal with this library is to make the common user interface behaviors available in an easy 
         to use API, backed by a an extensive test suite. I think it crazy that all around the world 
         developers are writing the same logic. I believe that designs should be unique, but the common 
         behaviors should be extracted.
       </p>
 
-      <p class="mb-4">
+      <p>
         <strong>As a developer you bring value by making designs come to life, and by creating features
           for your end-users, not by writing the umpteenth carousel.
         </strong>
       </p>
 
-      <p class="mb-4">
+      <p>
         I hope to save you a lot of time and effort by providing this library. 
       </p>
 
@@ -71,7 +71,7 @@ permalink: /letters/to-developers/
         Yours truly,
       </p>
 
-      <p class="mb-4">
+      <p>
         Maarten Hus
       </p>
     </div>
@@ -88,7 +88,7 @@ permalink: /letters/to-developers/
 
         <!-- CTA content -->
         <div class="mb-6 lg:mr-16 lg:mb-0 text-center lg:text-left">
-          <h3 class="h3 text-white mb-2">Ready to get started?</h3>
+          <h3 class="text-white">Ready to get started?</h3>
           <p class="text-white text-lg opacity-75">"uiloos" is just an `npm install` away</p>
         </div>
 
