--- a/packages/website/src/pages/letters/to-managers.njk
+++ b/packages/website/src/pages/letters/to-managers.njk
@@ -9,30 +9,30 @@ permalink: /letters/to-managers/
     <!-- Article header -->
     <header class="max-w-3xl mx-auto mb-4">
       <!-- Title -->
-      <h1 class="h1 text-center mb-4">A Letter to Managers</h1>
+      <h1 class="text-center">A Letter to Managers</h1>
     </header>
 
     <div class="flex justify-center mb-8">
       <img class="transform scale-105 hover:-translate-y-1 transition duration-500 ease-out" src="/images/avatars/manager.svg" alt="a manager" loading="lazy"/>
     </div>
 
-    <div class="text-xl max-w-3xl mx-auto">
-      <p class="mb-4">
+    <div class="max-w-3xl mx-auto">
+      <p>
         Dear Manager,
       </p>
 
-      <p class="mb-4">
+      <p>
         You are probably reading this letter because one of your team members want to use this library
         and needs a license. Now you are wondering what this software library is all about.
       </p>
 
-      <p class="mb-4">
+      <p>
        "uiloos" is a library which provides common user interface components, such as tabs, carousels 
         and more. Without having a visual appearance of its own, this gives designers the power to
         bring their own unique designs without compromising on the look and feel.
       </p>
 
-      <p class="mb-4">
+      <p>
         An apt analogy is the Volkswagen group, a large automobile concern. It contains brands such 
         as Audi, SEAT and Škoda. It would be wasteful if each brand would create their own cars 
         completely from scratch, so what they did was create a "platform". The platform contains
@@ -40,7 +40,7 @@ permalink: /letters/to-managers/
         platforms to create a unique design.
       </p>
 
-      <p class="mb-4">
+      <p>
         <strong>
           What uiloos is a "platform" for user interface components, which provides common behaviors
           out of the box. uiloos will accelerate your front-end developers and lets them create 
@@ -48,7 +48,7 @@ permalink: /letters/to-managers/
         </strong>
       </p>
 
-      <p class="mb-4">
+      <p>
         I hope to save your developers a lot of time and effort by providing them this library. 
       </p>
 
@@ -56,7 +56,7 @@ permalink: /letters/to-managers/
         Yours truly,
       </p>
 
-      <p class="mb-4">
+      <p>
         Maarten Hus
       </p>
     </div>
@@ -73,7 +73,7 @@ permalink: /letters/to-managers/
 
         <!-- CTA content -->
         <div class="mb-6 lg:mr-16 lg:mb-0 text-center lg:text-left">
-          <h3 class="h3 text-white mb-2">Ready to purchase uiloos?</h3>
+          <h3 class="text-white">Ready to purchase uiloos?</h3>
           <p class="text-white text-lg opacity-75">View our plans</p>
         </div>
 
