--- a/packages/website/src/_includes/components/apinav.njk
+++ b/packages/website/src/_includes/components/apinav.njk
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<aside class="mt-24 mb-8 xl:w-64 xl:mr-12 xl:shrink-0">
+<aside class="text-lg mb-8 xl:w-64 xl:mr-12 xl:shrink-0 xl:sticky xl:top-16 xl:self-start">
 
   <button
     class="flex items-center justify-between text-xl font-medium text-gray-900 w-full my-4 xl:hidden"
