--- a/packages/website/src/_includes/components/docsnav.njk
+++ b/packages/website/src/_includes/components/docsnav.njk
@@ -1,7 +1,7 @@
 <!-- Sidebar -->
-<aside class="mt-24 mb-8 xl:w-64 xl:mr-12 xl:shrink-0">
+<aside class="text-lg mb-8 xl:w-64 xl:mr-12 xl:shrink-0 xl:sticky xl:top-16 xl:self-start">
  
- <button
+  <button
     class="flex items-center justify-between text-xl font-medium text-gray-900 w-full my-4 xl:hidden"
   >
     <span>Docs navigation</span>
