--- a/packages/website/src/pages/api/_includes/error.njk
+++ b/packages/website/src/pages/api/_includes/error.njk
@@ -1,7 +1,7 @@
 {% from "./macros.njk" import displaySignatures %}
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">
+<article>
+  <h1>
     {{def.name}}
 
     {% if def.typeParameter.length > 0 %}
@@ -11,9 +11,9 @@
 
   <p class="text-2xl font-mono mb-4 text-red-800">ERROR</p>
 
-  <p class="mb-4">{{def.comment.shortText | escape | nl2br}}</p>
+  <p>{{def.comment.shortText | escape | nl2br}}</p>
   {% if def.comment.text %}
-    <p class="mb-2">{{def.comment.text | escape | nl2br}}</p>
+    <p>{{def.comment.text | escape | nl2br}}</p>
   {% endif %}
 
-</div>
+</article>
