--- a/packages/website/src/pages/api/_includes/typealias.njk
+++ b/packages/website/src/pages/api/_includes/typealias.njk
@@ -1,11 +1,11 @@
 {% from "./macros.njk" import displayType, displaySignatures %}
 
 {% macro displayProperties(properties) %}
-  <h2 class="h2 mt-4 mb-2">Properties</h2>
+  <h2 class="mt-4">Properties</h2>
 
   {% for type in properties %}
     <div class="border px-2 pt-4 mb-4">
-      <h3 class="h3 mb-2 font-mono" id="{{type.name}}">
+      <h3 class="font-mono" id="{{type.name}}">
         <a href="#{{type.name}}">{{type.name}}</a>
         {% if type.flags.isOptional %}
           <span class="text-sm italic">Optional</span>
@@ -20,7 +20,7 @@
         </p>
       {% endif %}
 
-      <p class="mb-4">{{type.comment.shortText | escape | nl2br}}</p>
+      <p>{{type.comment.shortText | escape | nl2br}}</p>
       {% if type.comment.text %}
         <p class="mb-2">{{type.comment.text | escape | nl2br}}</p>
       {% endif %}
@@ -33,8 +33,8 @@
   {% endfor %}
 {% endmacro %}
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">{{def.name}}
+<article>
+  <h1>{{def.name}}
 
     {% if def.typeParameter.length > 0 %}
       &lt;{{def.typeParameter[0].name}}&gt;
@@ -44,7 +44,7 @@
   <p class="text-2xl font-mono mb-4 text-orange-800">TYPE DEFINITION</p>
 
   {% if def.comment.shortText %}
-    <p class="mb-4">{{def.comment.shortText | escape | nl2br}}</p>
+    <p>{{def.comment.shortText | escape | nl2br}}</p>
   {% endif %}
   {% if def.comment.text %}
     <p class="mb-2">{{def.comment.text | escape | nl2br}}</p>
@@ -57,14 +57,14 @@
       {{ displaySignatures(def.type.declaration.signatures) }}
     {% endif %}
   {% elif def.type.type === 'union' %}
-    <h2 class="h2 mt-4 mb-2">Union of</h2>
+    <h2 class="mt-4">Union of</h2>
     <p class="mb-4 font-mono">
       {{ displayType(def.type, false) }}
     </p>
   {% elif def.type.type === 'intersection' %}
     {% for inter in def.type.types %}
       {% if inter.type === 'reference' %}
-        <h2 class="h2 mb-2 font-mono">Extends
+        <h2 class="font-mono">Extends
           <a class="underline text-purple-600" href="/api/core/{{ inter.name | slug}}/">{{inter.name}}</a>
         </h2>
       {% else %}
@@ -72,4 +72,4 @@
       {% endif %}
     {% endfor %}
   {% endif %}
-</div>
+</article>
