--- a/packages/website/src/pages/api/angular/angular.njk
+++ b/packages/website/src/pages/api/angular/angular.njk
@@ -6,10 +6,10 @@ permalink: /api/angular/
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">Angular</h1>
+<article>
+  <h1>Angular</h1>
 
-  <p class="mb-8">The Angular bindings for uiloos.</p>
+  <p>The Angular bindings for uiloos.</p>
 
   {{ displayApi(api.angular.children, 'angular') }}
-</div>
+</article>
