--- a/packages/website/src/pages/api/vue/_includes/component.njk
+++ b/packages/website/src/pages/api/vue/_includes/component.njk
@@ -1,7 +1,7 @@
 {% from "../../_includes/macros.njk" import displayType %}
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">
+<article>
+  <h1>
     {{def.name}}
 
     {% if def
@@ -14,15 +14,15 @@
 
   <p class="text-2xl font-mono mb-4 text-red-800">COMPONENT</p>
 
-  <p class="mb-4">{{def.comment.shortText | escape | nl2br}}</p>
+  <p>{{def.comment.shortText | escape | nl2br}}</p>
   {% if def.comment.text %}
     <p class="mb-2">{{def.comment.text | escape | nl2br}}</p>
   {% endif %}
 
-  <h2 class="h2 mb-2" id="props"><a href="#props">Props</a></h2>
+  <h2 id="props"><a href="#props">Props</a></h2>
   {% for item in def.type.typeArguments[0].declaration.children %}
     <div class="border px-2 pt-4 mb-4">
-      <h3 class="h3 mb-2 font-mono" id="{{item.name}}"><a href="#{{item.name}}">{{item.name}}</a></h3>
+      <h3 class="font-mono" id="{{item.name}}"><a href="#{{item.name}}">{{item.name}}</a></h3>
 
       <p class="mb-4 font-mono">
         {% for subitem in item.type.declaration.children %}
@@ -33,4 +33,4 @@
       </p>
     </div>
   {% endfor %}
-</div>
+</article>
