--- a/packages/website/src/pages/api/vue/_includes/composable.njk
+++ b/packages/website/src/pages/api/vue/_includes/composable.njk
@@ -1,7 +1,7 @@
 {% from "../../_includes/macros.njk" import displaySignatures %}
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">
+<article>
+  <h1>
     {{def.name}}
 
     {% if def.signatures[0].typeParameter.length > 0 %}
@@ -13,4 +13,4 @@
   
   {{ displaySignatures(def.signatures) }}
 
-</div>
+</article>
