--- a/packages/website/src/pages/api/vue/vue.njk
+++ b/packages/website/src/pages/api/vue/vue.njk
@@ -6,10 +6,10 @@ permalink: /api/vue/
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-xl">
-  <h1 class="h1 mb-4">Vue</h1>
+<article>
+  <h1>Vue</h1>
 
-  <p class="mb-8">The Vue bindings for uiloos.</p>
+  <p>The Vue bindings for uiloos.</p>
 
   {{ displayApi(api.vue.children, 'vue') }}
-</div>
+</article>
