--- a/packages/website/src/pages/letters/to-designers.njk
+++ b/packages/website/src/pages/letters/to-designers.njk
@@ -9,55 +9,55 @@ permalink: /letters/to-designers/
     <!-- Article header -->
     <header class="max-w-3xl mx-auto mb-4">
       <!-- Title -->
-      <h1 class="h1 text-center mb-4">A Letter to Designers</h1>
+      <h1 class="text-center">A Letter to Designers</h1>
     </header>
 
     <div class="flex justify-center mb-8">
       <img class="transform scale-105 hover:-translate-y-1 transition duration-500 ease-out" src="/images/avatars/designer.svg" alt="a graphical designer" loading="lazy"/>
     </div>
 
-    <div class="text-xl max-w-3xl mx-auto">
-      <p class="mb-4">
+    <div class="max-w-3xl mx-auto">
+      <p>
         Dear Designer,
       </p>
 
-      <p class="mb-4">
+      <p>
         I've always been jealous of your ability and skills to make things look and feel beautiful.
         I always joke that I would give up my left pinky finger to be able to select two matching colors,
         but alas... it is just not in the cards for me.
       </p>
 
-      <p class="mb-4">
+      <p>
         In a way I've always felt that there is this gap between developers and designers. But luckily
         for us there are ways to build bridges. I can buy a nice template like I did for this site, sure
         it might not make this the most unique website in the world, but it is better than leaving me
         to my own devices.
       </p>
 
-      <p class="mb-4">
+      <p>
         The gap of course cuts both ways, it is also there for designers. I've worked with many talented designers
         over the years whom have told met the same thing: "I understand HTML and CSS, but JavaScript is different.
         I understand the basics like 'if statements' and 'for loops' but as soon as I need to make something
         completely from scratch I don't know where to start."
       </p>
 
-      <p class="mb-4">
+      <p>
         So what most designers then do is rely on plugins and pre-made components. But these components / plugins have a
         problem, they never "look" quite like you have in mind for your design. Sure some can be customized
         80% of the way towards the design, but the last 20% is an herculean effort to achieve.
       </p>
 
-      <p class="mb-4">
+      <p>
         <strong>Designers want complete control over the way their designs look.</strong>
       </p>
 
-      <p class="mb-4">
+      <p>
         uiloos aims to be your bridge across this gap of ours. It by design does not contain any
         HTML or CSS, just plain JavaScript. This allows you to have complete control over the 
         design without any sacrifices. 
       </p>
 
-      <p class="mb-4">
+      <p>
         My hope is that this allows you a designer, to be able 
         to prototype ideas a little easier. My hope is also that uiloos is so easy to understand 
         that and maybe, just maybe, it even allow you to write production level code.
@@ -67,7 +67,7 @@ permalink: /letters/to-designers/
         Yours truly,
       </p>
 
-      <p class="mb-4">
+      <p>
         Maarten Hus
       </p>
     </div>
@@ -84,7 +84,7 @@ permalink: /letters/to-designers/
 
         <!-- CTA content -->
         <div class="mb-6 lg:mr-16 lg:mb-0 text-center lg:text-left">
-          <h3 class="h3 text-white mb-2">Ready to get started?</h3>
+          <h3 class="text-white">Ready to get started?</h3>
           <p class="text-white text-lg opacity-75">"uiloos" is just an `npm install` away</p>
         </div>
 
