--- a/packages/website/src/styles/additional-styles/utility-patterns.scss
+++ b/packages/website/src/styles/additional-styles/utility-patterns.scss
@@ -1,18 +1,18 @@
 // Typography
-.h1 {
-  @apply text-4xl font-extrabold leading-tight tracking-tighter;
+h1 {
+  @apply text-4xl font-extrabold leading-tight tracking-tighter mb-4;
 }
 
-.h2 {
-  @apply text-3xl font-extrabold leading-tight tracking-tighter;
+h2 {
+  @apply text-3xl font-extrabold leading-tight tracking-tighter mb-2;
 }
 
-.h3 {
-  @apply text-3xl font-bold leading-tight;
+h3 {
+  @apply text-3xl font-bold leading-tight mb-2;
 }
 
-.h4 {
-  @apply text-2xl font-bold leading-snug tracking-tight;
+h4 {
+  @apply text-2xl font-bold leading-snug tracking-tight mb-2;
 }
 
 a.high, span.high {
@@ -23,12 +23,16 @@ a.high {
   @apply underline hover:bg-purple-300;
 }
 
+p {
+  @apply mb-4;
+}
+
 @screen md {
-  .h1 {
+  h1 {
     @apply text-5xl;
   }
 
-  .h2 {
+  h2 {
     @apply text-4xl;
   }
 }
